fix multiclass netsaur

--- a/nn/multiclass.ipynb
+++ b/nn/multiclass.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,15 +40,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We first read our dataset."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +56,7 @@
        "]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,12 +72,12 @@
     "const y = data.map((fl) => fl[4]);\n",
     "\n",
     "const encoder = new CategoricalEncoder()\n",
-    "const encodedY = encoder.fit(y).transform<\"f64\">(y, \"f64\")"
+    "const encodedY = encoder.fit(y).transform<\"f32\">(y, \"f32\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,12 +86,23 @@
     "  { ratio: [7, 3], shuffle: true },\n",
     "  x,\n",
     "  encodedY\n",
-    ");"
+    ");\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We classified the same dataset in our SLP example too, but we weren't able to get 100% accuracy most of the time due to the `versicolor` and `virginica` classes not being linearly separable. \n",
+    "\n",
+    "We are adding a hidden layer with `ReLU` activation before our `Softmax` output layer.\n",
+    "\n",
+    "With a multi-layer neural network, we can use the `ReLU` activation function to induce non-linearity in our model. This helps us accurately classify the three species."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -143,14 +147,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "training time: 27.817799999999806ms\n"
+      "training time: 20.82209999999759ms\n"
      ]
     }
    ],
@@ -167,45 +171,57 @@
     "  1,\n",
     "  0.02\n",
     ");\n",
-    "console.log(`training time: ${performance.now() - time}ms`);"
+    "console.log(`training time: ${performance.now() - time}ms`);\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that the model has been trained, we can test its performance."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table><thead><tr><th>Class</th><th>Precision</th><th>F1Score</th><th>Recall</th><th>Support</th></tr></thead><tr><td>Iris-setosa</td><td>1</td><td>1</td><td>1</td><td>14</td></tr><tr><td>Iris-versicolor</td><td>1</td><td>1</td><td>1</td><td>14</td></tr><tr><td>Iris-virginica</td><td>1</td><td>1</td><td>1</td><td>17</td></tr><tr><td>Accuracy</td><td></td><td></td><td>1</td><td>45</td></tr></table>"
+      ],
+      "text/plain": [
+       "Classification Report\n",
+       "Number of classes:\t3\n",
+       "Class\tPreci\tF1\tRec\tSup\n",
+       "Iris-setosa\t1\t1\t1\t14\n",
+       "Iris-versicolor\t1\t1\t1\t14\n",
+       "Iris-virginica\t1\t1\t1\t17\n",
+       "Accuracy\t\t1\t45"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "// Calculate metrics\n",
     "const res = await Promise.all(x_test.map(d => net.predict(tensor1D(d))));\n",
     "\n",
     "const y1 = res.map((x) => encoder.getOg(x.data.indexOf(Math.max(...x.data))));\n",
     "const y0 = encoder.untransform(y_test);\n",
-    "console.log(y1, y0)\n",
     "const cReport = new ClassificationReport(y0, y1);\n",
-    "cReport;\n"
+    "cReport;"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "As you can see, we have achieved a better result than with our SLP."
+   ]
   }
  ],
  "metadata": {
