--- a/nn/linear_regression.ipynb
+++ b/nn/linear_regression.ipynb
@@ -29,7 +29,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's initialize the predictor and target variables."
+    "Let's initialize the predictor and target variables.\n",
+    "\n",
+    "We will make our model learn the function `y1 = 3x1 + 5x2`, `y2 = 9x1 + 4x2 + 13`."
    ]
   },
   {
