use jsr imports for slp

--- a/slp/linear_regression.ipynb
+++ b/slp/linear_regression.ipynb
@@ -9,13 +9,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mDownloading\u001b[39m https://github.com/retraigo/classy-lala/releases/download/v1.0.1/classy.dll\n"
+     ]
+    }
+   ],
    "source": [
     "import {\n",
-    "  OLSSolver,\n",
-    "} from \"https://deno.land/x/classylala@v1.0.0/mod.ts\";\n"
+    "  OLSSolver\n",
+    "} from \"jsr:@lala/classy@1.0.1\";"
    ]
   },
   {
@@ -29,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +46,7 @@
        "[ [ \u001b[33m115\u001b[39m, \u001b[33m74\u001b[39m ], [ \u001b[33m125\u001b[39m, \u001b[33m90\u001b[39m ], [ \u001b[33m666\u001b[39m, \u001b[33m497\u001b[39m ], [ \u001b[33m149\u001b[39m, \u001b[33m76\u001b[39m ], [ \u001b[33m498\u001b[39m, \u001b[33m207\u001b[39m ] ]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -52,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,14 +93,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "training time: 0.07489999999233987ms\n"
+      "training time: 0.3636999999998807ms\n"
      ]
     }
    ],
@@ -113,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +130,7 @@
        "[ \u001b[33m1\u001b[39m, \u001b[33m2\u001b[39m ]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +151,7 @@
        "[ [ \u001b[33m164.00000000000037\u001b[39m, \u001b[33m111.00000000000037\u001b[39m ], [ \u001b[33m164\u001b[39m, \u001b[33m111\u001b[39m ] ]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
