--- a/slp/logistic_regression.ipynb
+++ b/slp/logistic_regression.ipynb
@@ -16,24 +16,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[32mDownloading\u001b[39m https://github.com/retraigo/classy-lala/releases/download/v1.0.0/classy.dll\n"
+      "\u001b[32mDownloading\u001b[39m https://github.com/retraigo/classy-lala/releases/download/v1.0.1/classy.dll\n"
      ]
     }
    ],
    "source": [
-    "import { parse } from \"https://deno.land/std@0.204.0/csv/parse.ts\";\n",
+    "import { parse } from \"jsr:@std/csv\";\n",
     "import {\n",
     "  ClassificationReport,\n",
     "  Matrix,\n",
     "  useSplit,\n",
     "  CategoricalEncoder,\n",
-    "} from \"https://deno.land/x/vectorizer@v0.3.5/mod.ts\";\n",
+    "} from \"jsr:@lala/appraisal@0.4.0\";\n",
     "import {\n",
     "  SagSolver,\n",
     "  softmaxActivation,\n",
     "  rmsPropOptimizer,\n",
     "  crossEntropy,\n",
-    "} from \"https://deno.land/x/classylala@v1.0.0/mod.ts\";\n"
+    "} from \"jsr:@lala/classy@1.0.1\";\n"
    ]
   },
   {
@@ -101,7 +101,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<thead><tr><th>idx</th><th>0</th><th>1</th><th>2</th><th>3</th></tr></thead><tr><td><strong>0</strong></td><td>5.1</td><td>3.5</td><td>1.4</td><td>0.2</td></tr><tr><td><strong>1</strong></td><td>4.9</td><td>3</td><td>1.4</td><td>0.2</td></tr><tr><td><strong>2</strong></td><td>4.7</td><td>3.2</td><td>1.3</td><td>0.2</td></tr><tr><td><strong>3</strong></td><td>4.6</td><td>3.1</td><td>1.5</td><td>0.2</td></tr><tr><td><strong>4</strong></td><td>5</td><td>3.6</td><td>1.4</td><td>0.2</td></tr><tr><td><strong>5</strong></td><td>5.4</td><td>3.9</td><td>1.7</td><td>0.4</td></tr><tr><td><strong>6</strong></td><td>4.6</td><td>3.4</td><td>1.4</td><td>0.3</td></tr><tr><td><strong>7</strong></td><td>5</td><td>3.4</td><td>1.5</td><td>0.2</td></tr><tr><td><strong>8</strong></td><td>4.4</td><td>2.9</td><td>1.4</td><td>0.2</td></tr><tr><td><strong>9</strong></td><td>4.9</td><td>3.1</td><td>1.5</td><td>0.1</td></tr></table>"
+       "<thead><tr><DTh>idx</th><DTh>0</th><DTh>1</th><DTh>2</th><DTh>3</th></tr></thead><tr><td><strong>0</strong></td><td>5.1</td><td>3.5</td><td>1.4</td><td>0.2</td></tr><tr><td><strong>1</strong></td><td>4.9</td><td>3</td><td>1.4</td><td>0.2</td></tr><tr><td><strong>2</strong></td><td>4.7</td><td>3.2</td><td>1.3</td><td>0.2</td></tr><tr><td><strong>3</strong></td><td>4.6</td><td>3.1</td><td>1.5</td><td>0.2</td></tr><tr><td><strong>4</strong></td><td>5</td><td>3.6</td><td>1.4</td><td>0.2</td></tr><tr><td><strong>5</strong></td><td>5.4</td><td>3.9</td><td>1.7</td><td>0.4</td></tr><tr><td><strong>6</strong></td><td>4.6</td><td>3.4</td><td>1.4</td><td>0.3</td></tr><tr><td><strong>7</strong></td><td>5</td><td>3.4</td><td>1.5</td><td>0.2</td></tr><tr><td><strong>8</strong></td><td>4.4</td><td>2.9</td><td>1.4</td><td>0.2</td></tr><tr><td><strong>9</strong></td><td>4.9</td><td>3.1</td><td>1.5</td><td>0.1</td></tr></table>"
       ],
       "text/plain": [
        "5.1\t3.5\t1.4\t0.2\n",
@@ -124,7 +124,7 @@
    "source": [
     "const x = data.map((fl, i) => fl.slice(0, 4).map(Number));\n",
     "\n",
-    "const X = new Matrix<\"f64\">(Float64Array.from(x.flat()), [data.length])\n",
+    "const X = new Matrix<\"f64\">(Float64Array.from(x.flat()), {shape: [data.length]})\n",
     "X.slice(0, 10)"
    ]
   },
@@ -176,7 +176,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<thead><tr><th>idx</th><th>0</th><th>1</th><th>2</th></tr></thead><tr><td><strong>0</strong></td><td>1</td><td>0</td><td>0</td></tr><tr><td><strong>1</strong></td><td>1</td><td>0</td><td>0</td></tr><tr><td><strong>2</strong></td><td>1</td><td>0</td><td>0</td></tr><tr><td><strong>3</strong></td><td>1</td><td>0</td><td>0</td></tr><tr><td><strong>4</strong></td><td>1</td><td>0</td><td>0</td></tr><tr><td><strong>5</strong></td><td>1</td><td>0</td><td>0</td></tr><tr><td><strong>6</strong></td><td>1</td><td>0</td><td>0</td></tr><tr><td><strong>7</strong></td><td>1</td><td>0</td><td>0</td></tr><tr><td><strong>8</strong></td><td>1</td><td>0</td><td>0</td></tr><tr><td><strong>9</strong></td><td>1</td><td>0</td><td>0</td></tr></table>"
+       "<thead><tr><DTh>idx</th><DTh>0</th><DTh>1</th><DTh>2</th></tr></thead><tr><td><strong>0</strong></td><td>1</td><td>0</td><td>0</td></tr><tr><td><strong>1</strong></td><td>1</td><td>0</td><td>0</td></tr><tr><td><strong>2</strong></td><td>1</td><td>0</td><td>0</td></tr><tr><td><strong>3</strong></td><td>1</td><td>0</td><td>0</td></tr><tr><td><strong>4</strong></td><td>1</td><td>0</td><td>0</td></tr><tr><td><strong>5</strong></td><td>1</td><td>0</td><td>0</td></tr><tr><td><strong>6</strong></td><td>1</td><td>0</td><td>0</td></tr><tr><td><strong>7</strong></td><td>1</td><td>0</td><td>0</td></tr><tr><td><strong>8</strong></td><td>1</td><td>0</td><td>0</td></tr><tr><td><strong>9</strong></td><td>1</td><td>0</td><td>0</td></tr></table>"
       ],
       "text/plain": [
        "1\t0\t0\n",
@@ -238,19 +238,19 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<thead><tr><th>idx</th><th>0</th><th>1</th><th>2</th><th>3</th></tr></thead><tr><td><strong>0</strong></td><td>4.9</td><td>3</td><td>1.4</td><td>0.2</td></tr><tr><td><strong>1</strong></td><td>4.7</td><td>3.2</td><td>1.3</td><td>0.2</td></tr><tr><td><strong>2</strong></td><td>4.6</td><td>3.1</td><td>1.5</td><td>0.2</td></tr><tr><td><strong>3</strong></td><td>5</td><td>3.6</td><td>1.4</td><td>0.2</td></tr><tr><td><strong>4</strong></td><td>5.4</td><td>3.9</td><td>1.7</td><td>0.4</td></tr><tr><td><strong>5</strong></td><td>4.4</td><td>2.9</td><td>1.4</td><td>0.2</td></tr><tr><td><strong>6</strong></td><td>4.9</td><td>3.1</td><td>1.5</td><td>0.1</td></tr><tr><td><strong>7</strong></td><td>4.3</td><td>3</td><td>1.1</td><td>0.1</td></tr><tr><td><strong>8</strong></td><td>5.8</td><td>4</td><td>1.2</td><td>0.2</td></tr><tr><td><strong>9</strong></td><td>5.7</td><td>4.4</td><td>1.5</td><td>0.4</td></tr></table>"
+       "<thead><tr><DTh>idx</th><DTh>0</th><DTh>1</th><DTh>2</th><DTh>3</th></tr></thead><tr><td><strong>0</strong></td><td>4.7</td><td>3.2</td><td>1.3</td><td>0.2</td></tr><tr><td><strong>1</strong></td><td>4.6</td><td>3.1</td><td>1.5</td><td>0.2</td></tr><tr><td><strong>2</strong></td><td>5</td><td>3.6</td><td>1.4</td><td>0.2</td></tr><tr><td><strong>3</strong></td><td>4.6</td><td>3.4</td><td>1.4</td><td>0.3</td></tr><tr><td><strong>4</strong></td><td>5</td><td>3.4</td><td>1.5</td><td>0.2</td></tr><tr><td><strong>5</strong></td><td>4.4</td><td>2.9</td><td>1.4</td><td>0.2</td></tr><tr><td><strong>6</strong></td><td>4.9</td><td>3.1</td><td>1.5</td><td>0.1</td></tr><tr><td><strong>7</strong></td><td>5.4</td><td>3.7</td><td>1.5</td><td>0.2</td></tr><tr><td><strong>8</strong></td><td>4.8</td><td>3.4</td><td>1.6</td><td>0.2</td></tr><tr><td><strong>9</strong></td><td>4.8</td><td>3</td><td>1.4</td><td>0.1</td></tr></table>"
       ],
       "text/plain": [
-       "4.9\t3\t1.4\t0.2\n",
        "4.7\t3.2\t1.3\t0.2\n",
        "4.6\t3.1\t1.5\t0.2\n",
        "5\t3.6\t1.4\t0.2\n",
-       "5.4\t3.9\t1.7\t0.4\n",
+       "4.6\t3.4\t1.4\t0.3\n",
+       "5\t3.4\t1.5\t0.2\n",
        "4.4\t2.9\t1.4\t0.2\n",
        "4.9\t3.1\t1.5\t0.1\n",
-       "4.3\t3\t1.1\t0.1\n",
-       "5.8\t4\t1.2\t0.2\n",
-       "5.7\t4.4\t1.5\t0.4\n"
+       "5.4\t3.7\t1.5\t0.2\n",
+       "4.8\t3.4\t1.6\t0.2\n",
+       "4.8\t3\t1.4\t0.1\n"
       ]
      },
      "execution_count": 8,
@@ -349,9 +349,9 @@
      "data": {
       "text/plain": [
        "Float64Array(3) [\n",
-       "  \u001b[33m0.999999999999982\u001b[39m,\n",
-       "  \u001b[33m1.7891493919968546e-14\u001b[39m,\n",
-       "  \u001b[33m1.394247800780724e-27\u001b[39m\n",
+       "  \u001b[33m0.9999999999999838\u001b[39m,\n",
+       "  \u001b[33m1.6262238633880303e-14\u001b[39m,\n",
+       "  \u001b[33m2.782166297078632e-26\u001b[39m\n",
        "]"
       ]
      },
@@ -382,7 +382,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<thead><tr><th>idx</th><th>0</th><th>1</th><th>2</th></tr></thead><tr><td><strong>0</strong></td><td>1</td><td>0</td><td>0</td></tr><tr><td><strong>1</strong></td><td>1</td><td>0</td><td>0</td></tr><tr><td><strong>2</strong></td><td>1</td><td>0</td><td>0</td></tr><tr><td><strong>3</strong></td><td>1</td><td>0</td><td>0</td></tr><tr><td><strong>4</strong></td><td>1</td><td>0</td><td>0</td></tr><tr><td><strong>5</strong></td><td>1</td><td>0</td><td>0</td></tr><tr><td><strong>6</strong></td><td>1</td><td>0</td><td>0</td></tr><tr><td><strong>7</strong></td><td>1</td><td>0</td><td>0</td></tr><tr><td><strong>8</strong></td><td>1</td><td>0</td><td>0</td></tr><tr><td><strong>9</strong></td><td>1</td><td>0</td><td>0</td></tr></table>"
+       "<thead><tr><DTh>idx</th><DTh>0</th><DTh>1</th><DTh>2</th></tr></thead><tr><td><strong>0</strong></td><td>1</td><td>0</td><td>0</td></tr><tr><td><strong>1</strong></td><td>1</td><td>0</td><td>0</td></tr><tr><td><strong>2</strong></td><td>1</td><td>0</td><td>0</td></tr><tr><td><strong>3</strong></td><td>1</td><td>0</td><td>0</td></tr><tr><td><strong>4</strong></td><td>1</td><td>0</td><td>0</td></tr><tr><td><strong>5</strong></td><td>1</td><td>0</td><td>0</td></tr><tr><td><strong>6</strong></td><td>1</td><td>0</td><td>0</td></tr><tr><td><strong>7</strong></td><td>1</td><td>0</td><td>0</td></tr><tr><td><strong>8</strong></td><td>1</td><td>0</td><td>0</td></tr><tr><td><strong>9</strong></td><td>1</td><td>0</td><td>0</td></tr></table>"
       ],
       "text/plain": [
        "1\t0\t0\n",
@@ -439,12 +439,12 @@
        "    \u001b[32m\"Iris-setosa\"\u001b[39m,     \u001b[32m\"Iris-setosa\"\u001b[39m,     \u001b[32m\"Iris-setosa\"\u001b[39m,\n",
        "    \u001b[32m\"Iris-setosa\"\u001b[39m,     \u001b[32m\"Iris-setosa\"\u001b[39m,     \u001b[32m\"Iris-setosa\"\u001b[39m,\n",
        "    \u001b[32m\"Iris-setosa\"\u001b[39m,     \u001b[32m\"Iris-setosa\"\u001b[39m,     \u001b[32m\"Iris-setosa\"\u001b[39m,\n",
-       "    \u001b[32m\"Iris-setosa\"\u001b[39m,     \u001b[32m\"Iris-versicolor\"\u001b[39m, \u001b[32m\"Iris-versicolor\"\u001b[39m,\n",
+       "    \u001b[32m\"Iris-setosa\"\u001b[39m,     \u001b[32m\"Iris-setosa\"\u001b[39m,     \u001b[32m\"Iris-setosa\"\u001b[39m,\n",
        "    \u001b[32m\"Iris-versicolor\"\u001b[39m, \u001b[32m\"Iris-versicolor\"\u001b[39m, \u001b[32m\"Iris-versicolor\"\u001b[39m,\n",
-       "    \u001b[32m\"Iris-virginica\"\u001b[39m,  \u001b[32m\"Iris-virginica\"\u001b[39m,  \u001b[32m\"Iris-versicolor\"\u001b[39m,\n",
        "    \u001b[32m\"Iris-versicolor\"\u001b[39m, \u001b[32m\"Iris-versicolor\"\u001b[39m, \u001b[32m\"Iris-versicolor\"\u001b[39m,\n",
-       "    \u001b[32m\"Iris-virginica\"\u001b[39m,  \u001b[32m\"Iris-virginica\"\u001b[39m,  \u001b[32m\"Iris-versicolor\"\u001b[39m,\n",
+       "    \u001b[32m\"Iris-versicolor\"\u001b[39m, \u001b[32m\"Iris-versicolor\"\u001b[39m, \u001b[32m\"Iris-versicolor\"\u001b[39m,\n",
        "    \u001b[32m\"Iris-versicolor\"\u001b[39m, \u001b[32m\"Iris-versicolor\"\u001b[39m, \u001b[32m\"Iris-virginica\"\u001b[39m,\n",
+       "    \u001b[32m\"Iris-virginica\"\u001b[39m,  \u001b[32m\"Iris-virginica\"\u001b[39m,  \u001b[32m\"Iris-virginica\"\u001b[39m,\n",
        "    \u001b[32m\"Iris-virginica\"\u001b[39m,  \u001b[32m\"Iris-virginica\"\u001b[39m,  \u001b[32m\"Iris-virginica\"\u001b[39m,\n",
        "    \u001b[32m\"Iris-virginica\"\u001b[39m,  \u001b[32m\"Iris-virginica\"\u001b[39m,  \u001b[32m\"Iris-virginica\"\u001b[39m,\n",
        "    \u001b[32m\"Iris-virginica\"\u001b[39m,  \u001b[32m\"Iris-virginica\"\u001b[39m,  \u001b[32m\"Iris-virginica\"\u001b[39m,\n",
@@ -456,12 +456,12 @@
        "    \u001b[32m\"Iris-setosa\"\u001b[39m,     \u001b[32m\"Iris-setosa\"\u001b[39m,     \u001b[32m\"Iris-setosa\"\u001b[39m,\n",
        "    \u001b[32m\"Iris-setosa\"\u001b[39m,     \u001b[32m\"Iris-setosa\"\u001b[39m,     \u001b[32m\"Iris-setosa\"\u001b[39m,\n",
        "    \u001b[32m\"Iris-setosa\"\u001b[39m,     \u001b[32m\"Iris-setosa\"\u001b[39m,     \u001b[32m\"Iris-setosa\"\u001b[39m,\n",
-       "    \u001b[32m\"Iris-setosa\"\u001b[39m,     \u001b[32m\"Iris-versicolor\"\u001b[39m, \u001b[32m\"Iris-versicolor\"\u001b[39m,\n",
-       "    \u001b[32m\"Iris-versicolor\"\u001b[39m, \u001b[32m\"Iris-versicolor\"\u001b[39m, \u001b[32m\"Iris-versicolor\"\u001b[39m,\n",
+       "    \u001b[32m\"Iris-setosa\"\u001b[39m,     \u001b[32m\"Iris-setosa\"\u001b[39m,     \u001b[32m\"Iris-setosa\"\u001b[39m,\n",
        "    \u001b[32m\"Iris-versicolor\"\u001b[39m, \u001b[32m\"Iris-versicolor\"\u001b[39m, \u001b[32m\"Iris-versicolor\"\u001b[39m,\n",
        "    \u001b[32m\"Iris-versicolor\"\u001b[39m, \u001b[32m\"Iris-versicolor\"\u001b[39m, \u001b[32m\"Iris-versicolor\"\u001b[39m,\n",
        "    \u001b[32m\"Iris-versicolor\"\u001b[39m, \u001b[32m\"Iris-versicolor\"\u001b[39m, \u001b[32m\"Iris-versicolor\"\u001b[39m,\n",
        "    \u001b[32m\"Iris-versicolor\"\u001b[39m, \u001b[32m\"Iris-versicolor\"\u001b[39m, \u001b[32m\"Iris-virginica\"\u001b[39m,\n",
+       "    \u001b[32m\"Iris-virginica\"\u001b[39m,  \u001b[32m\"Iris-virginica\"\u001b[39m,  \u001b[32m\"Iris-virginica\"\u001b[39m,\n",
        "    \u001b[32m\"Iris-virginica\"\u001b[39m,  \u001b[32m\"Iris-virginica\"\u001b[39m,  \u001b[32m\"Iris-virginica\"\u001b[39m,\n",
        "    \u001b[32m\"Iris-virginica\"\u001b[39m,  \u001b[32m\"Iris-virginica\"\u001b[39m,  \u001b[32m\"Iris-virginica\"\u001b[39m,\n",
        "    \u001b[32m\"Iris-virginica\"\u001b[39m,  \u001b[32m\"Iris-virginica\"\u001b[39m,  \u001b[32m\"Iris-virginica\"\u001b[39m,\n",
@@ -494,16 +494,16 @@
     {
      "data": {
       "text/html": [
-       "<table><thead><tr><th>Class</th><th>Precision</th><th>F1Score</th><th>Recall</th><th>Support</th></tr></thead><tr><td>Iris-setosa</td><td>1</td><td>1</td><td>1</td><td>16</td></tr><tr><td>Iris-versicolor</td><td>1</td><td>1</td><td>1</td><td>16</td></tr><tr><td>Iris-virginica</td><td>0.7647058823529411</td><td>0.8666666666666667</td><td>1</td><td>13</td></tr><tr><td>Accuracy</td><td></td><td></td><td>0.9703703703703703</td><td>45</td></tr></table>"
+       "<table><thead><tr><th>Class</th><th>Precision</th><th>F1Score</th><th>Recall</th><th>Support</th></tr></thead><tr><td>Iris-setosa</td><td>1</td><td>1</td><td>1</td><td>18</td></tr><tr><td>Iris-versicolor</td><td>1</td><td>1</td><td>1</td><td>11</td></tr><tr><td>Iris-virginica</td><td>1</td><td>1</td><td>1</td><td>16</td></tr><tr><td>Accuracy</td><td></td><td></td><td>1</td><td>45</td></tr></table>"
       ],
       "text/plain": [
        "Classification Report\n",
        "Number of classes:\t3\n",
        "Class\tPreci\tF1\tRec\tSup\n",
-       "Iris-setosa\t1\t1\t1\t16\n",
-       "Iris-versicolor\t1\t1\t1\t16\n",
-       "Iris-virginica\t0.7647058823529411\t0.8666666666666667\t1\t13\n",
-       "Accuracy\t\t0.9703703703703703\t45"
+       "Iris-setosa\t1\t1\t1\t18\n",
+       "Iris-versicolor\t1\t1\t1\t11\n",
+       "Iris-virginica\t1\t1\t1\t16\n",
+       "Accuracy\t\t1\t45"
       ]
      },
      "execution_count": 16,
