add netsaur examples

--- a/nn/linear_regression.ipynb
+++ b/nn/linear_regression.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
     "  tensor1D,\n",
     "  tensor2D,\n",
     "  AdamOptimizer\n",
-    "} from \"https://deno.land/x/netsaur@0.2.15/mod.ts\";"
+    "} from \"jsr:@denosaurs/netsaur@0.3.1\";"
    ]
   },
   {
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
        "[ [ \u001b[33m51\u001b[39m, \u001b[33m133\u001b[39m ], [ \u001b[33m142\u001b[39m, \u001b[33m351\u001b[39m ], [ \u001b[33m101\u001b[39m, \u001b[33m107\u001b[39m ], [ \u001b[33m32\u001b[39m, \u001b[33m65\u001b[39m ], [ \u001b[33m68\u001b[39m, \u001b[33m107\u001b[39m ] ]"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,9 +66,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mDownloading\u001b[39m https://github.com/denosaurs/netsaur/releases/download/0.3.1/netsaur.dll\n",
+      "CPU Backend Initialized\n"
+     ]
+    }
+   ],
    "source": [
     "await setupBackend(CPU);\n",
     "\n",
@@ -94,14 +103,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "training time: 6.981000000028871ms\n"
+      "training time: 7.653999999999996ms\n"
      ]
     }
    ],
@@ -130,25 +139,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "const res = await net.predict(tensor1D([18, 32]))"
+    "const res = await net.predict(tensor2D([[18, 32]]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[ [ \u001b[33m213.97418212890625\u001b[39m, \u001b[33m303.0185852050781\u001b[39m ], [ \u001b[33m214\u001b[39m, \u001b[33m303\u001b[39m ] ]"
+       "[ [ \u001b[33m213.97251892089844\u001b[39m, \u001b[33m303.0304260253906\u001b[39m ], [ \u001b[33m214\u001b[39m, \u001b[33m303\u001b[39m ] ]"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
