--- a/nn/multiclass.ipynb
+++ b/nn/multiclass.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,22 +26,21 @@
     "  tensor,\n",
     "  tensor1D,\n",
     "  tensor2D,\n",
-    "} from \"https://deno.land/x/netsaur@0.2.15/mod.ts\";\n",
+    "} from \"jsr:@denosaurs/netsaur@0.3.1\";\n",
     "\n",
-    "import { parse } from \"https://deno.land/std@0.204.0/csv/parse.ts\";\n",
+    "import { parse } from \"jsr:@std/csv\";\n",
     "\n",
-    "// Import helpers for metrics\n",
     "import {\n",
     "  ClassificationReport,\n",
-    "  // Split the dataset\n",
     "  useSplit,\n",
+    "  Matrix,\n",
     "  CategoricalEncoder,\n",
-    "} from \"https://deno.land/x/vectorizer@v0.3.5/mod.ts\";"
+    "} from \"jsr:@lala/appraisal@0.4.0\";"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +55,7 @@
        "]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,12 +71,12 @@
     "const y = data.map((fl) => fl[4]);\n",
     "\n",
     "const encoder = new CategoricalEncoder()\n",
-    "const encodedY = encoder.fit(y).transform<\"f32\">(y, \"f32\")"
+    "const encodedY = encoder.fit(y).transform(y, \"f32\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +108,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[32mDownloading\u001b[39m https://github.com/denosaurs/netsaur/releases/download/0.2.15/netsaur.dll\n",
+      "\u001b[32mDownloading\u001b[39m https://github.com/denosaurs/netsaur/releases/download/0.3.1/netsaur.dll\n",
       "CPU Backend Initialized\n"
      ]
     }
@@ -147,14 +146,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "training time: 20.82209999999759ms\n"
+      "training time: 28.4493000000366ms\n"
      ]
     }
    ],
@@ -164,11 +163,11 @@
     "  [\n",
     "    {\n",
     "      inputs: tensor2D(x_train),\n",
-    "      outputs: tensor(y_train.data, [y_train.nRows, y_train.nCols]),\n",
+    "      outputs: tensor(y_train.data, y_train.shape),\n",
     "    },\n",
     "  ],\n",
     "  300,\n",
-    "  1,\n",
+    "  5,\n",
     "  0.02\n",
     ");\n",
     "console.log(`training time: ${performance.now() - time}ms`);\n"
@@ -183,44 +182,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<table><thead><tr><th>Class</th><th>Precision</th><th>F1Score</th><th>Recall</th><th>Support</th></tr></thead><tr><td>Iris-setosa</td><td>1</td><td>1</td><td>1</td><td>14</td></tr><tr><td>Iris-versicolor</td><td>1</td><td>1</td><td>1</td><td>14</td></tr><tr><td>Iris-virginica</td><td>1</td><td>1</td><td>1</td><td>17</td></tr><tr><td>Accuracy</td><td></td><td></td><td>1</td><td>45</td></tr></table>"
+       "<table><thead><tr><th>Class</th><th>Precision</th><th>F1Score</th><th>Recall</th><th>Support</th></tr></thead><tr><td>Iris-setosa</td><td>1</td><td>1</td><td>1</td><td>17</td></tr><tr><td>Iris-versicolor</td><td>1</td><td>1</td><td>1</td><td>11</td></tr><tr><td>Iris-virginica</td><td>1</td><td>1</td><td>1</td><td>17</td></tr><tr><td>Accuracy</td><td></td><td></td><td>1</td><td>45</td></tr></table>"
       ],
       "text/plain": [
        "Classification Report\n",
        "Number of classes:\t3\n",
        "Class\tPreci\tF1\tRec\tSup\n",
-       "Iris-setosa\t1\t1\t1\t14\n",
-       "Iris-versicolor\t1\t1\t1\t14\n",
+       "Iris-setosa\t1\t1\t1\t17\n",
+       "Iris-versicolor\t1\t1\t1\t11\n",
        "Iris-virginica\t1\t1\t1\t17\n",
        "Accuracy\t\t1\t45"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "// Calculate metrics\n",
-    "const res = await Promise.all(x_test.map(d => net.predict(tensor1D(d))));\n",
+    "const res = await net.predict(tensor2D(x_test));\n",
     "\n",
-    "const y1 = res.map((x) => encoder.getOg(x.data.indexOf(Math.max(...x.data))));\n",
+    "const y1 = encoder.untransform(\n",
+    "    CategoricalEncoder.fromSoftmax(\n",
+    "        new Matrix(res.data, {shape: res.shape})\n",
+    "    )\n",
+    ");\n",
     "const y0 = encoder.untransform(y_test);\n",
     "const cReport = new ClassificationReport(y0, y1);\n",
     "cReport;"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "As you can see, we have achieved a better result than with our SLP."
    ]
   }
  ],
